--- a/gb/23/2/25/n13937987.md
+++ b/gb/23/2/25/n13937987.md
@@ -6,15 +6,14 @@
 <h6>2023年2月23日，Warren Ricks观看了神韵北美艺术团今年在美国盐湖城乔治乔治?多洛雷斯多尔?埃克尔斯剧院的第四场演出。（麦蕾／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年02月25日讯】（大纪元记者麦蕾美国盐湖城报导）“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>在各个方面都值得一看！（告诉我们）神是如何在运行这一切，我们来自天上！”公司总裁Warren Ricks观看神韵后由衷的说。</p>
-<p>2月24日晚上，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在美国盐湖城乔治乔治?多洛雷斯多尔?埃克尔斯剧院（George S. and Dolores Doré Eccles Theater）的演出热度持续升温，观众纷纷慕名前来一睹神韵风采。</p>
-<p>Ricks先生在禧伯城经营一家金融公司。他对神韵赞不绝口，“精美绝伦！我非常的享受，我很喜欢神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>和背景，美得惊人。演员角色表现得非常棒。我认为从各个方面讲，神韵都值得一看。”</p>
-<p>神韵展现的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7%E5%86%85%E6%B6%B5.md#1">神性内涵</a>深深的触动了Ricks先生。他表示，“神韵演出的表演形式完美的表达了所要传递给观众的信息，那就是告诉我们神是如何运行这一切的，我们正在回归神，我们都来自天上。”得到了这样的信息，他感到内心充满了希望和感恩。</p>
-<p>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的技艺已经达到登峰造极的程度。音乐非常的棒，触动了我的内心，我差一点哭了出来。”Ricks先生激动的说。</p>
-<p>演出中传递出的传统文化和普世价值，也让Ricks先生产生共鸣。</p>
-<p>其中一个讲述三国时期赵云救主的故事，让他印象深刻，“看着母亲被迫与孩子分离之痛，真的很触动人心。对故事的表达非常的感人至深，确实让观众身临其境，并感同身受。”</p>
-<p>对神韵演出中揭露中共残酷迫害法轮功学员的情节，Ricks先生感到震惊和悲伤。他非常认同“真、善、忍”的普世价值，他说，“这与我认同的价值观重合，特别是善良这方面。”</p>
-<p>最后Ricks先生对神韵演员表达了诚挚的敬佩之心，他说，“他们（神韵演员）做的非常出色！我非常的感动，节目制作精良，人物刻画入木三分。我们都很享受这个夜晚。非常感激神韵能来这里演出！”</p>
+	<p>【大纪元2023年02月25日讯】（大纪元记者麦蕾美国盐湖城报导）“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>在各个方面都值得一看！（告诉我们）神是如何在运行这一切，我们来自天上！”公司总裁Warren Ricks观看神韵后由衷地说。</p>
+<p>2月24日晚上，在禧伯城经营一家金融公司的Ricks，观赏了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9B%90%E6%B9%96%E5%9F%8E%E4%B9%94%E6%B2%BB%E2%80%A7%E5%A4%9A%E6%B4%9B%E9%9B%B7%E6%96%AF%E5%A4%9A%E5%B0%94%E2%80%A7%E5%9F%83%E5%85%8B%E5%B0%94%E6%96%AF%E5%89%A7%E9%99%A2.md#1">盐湖城乔治?多洛雷斯多尔?埃克尔斯剧院</a>（George S. and Dolores Doré Eccles Theater）的演出。</p>
+<p>他表示，“精美绝伦！我非常的陶醉，我很喜欢神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>和背景，美得惊人。演员角色表现得非常棒，我认为从各个方面讲，神韵都值得一看。”</p>
+<p>神韵展现的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7%E5%86%85%E6%B6%B5.md#1">神性内涵</a>触动了Ricks。他表示，“神韵演出的表演形式完美的表达了所要传递给观众的信息，那就是告诉我们神是如何运行这一切的，我们正在回归神，我们都来自天上。”得到了这样的信息，他感到内心充满了希望和感恩。</p>
+<p>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的技艺已经达到登峰造极的程度。音乐非常的棒，触动了我的内心，我差一点哭了出来。”Ricks激动的说。</p>
+<p>演出中一个讲述三国时期赵云救主的故事，让他印象深刻，“看着母亲被迫与孩子分离之痛，真的很触动人心。对故事的表达非常的感人至深，确实让观众身临其境，并感同身受。”</p>
+<p>对神韵演出中揭露中共残酷迫害法轮功学员的情节，Ricks感到震惊和悲伤。他非常认同“真、善、忍”的普世价值，他说，“这与我认同的价值观重合，特别是善良这方面。”</p>
+<p>最后Ricks他说，“他们做得非常出色！我非常的感动，节目制作精良，人物刻画入木三分。我们都很享受这个夜晚。非常感激神韵能来这里演出。”</p>
 <p>责任编辑：胡元真</p>
 	
 <hr>
@@ -31,31 +30,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11027279.md#1" target="_blank">孙盛起：总会有无畏的勇士记录历史的真实</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/15/n10394634.md#1" target="_blank">共产暴政录：抢教堂庙宇的献堂献庙</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935896.md#1">李强入常难风光 将成中共最弱总理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937600.md#1">【菁英论坛】中共版克格勃上线 国务院大削权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936676.md#1">【菁英论坛】机构改革重洗牌 习更深恐惧在墙内</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937217.md#1">【全球新闻】俄乌战争一周年 中共冒充和平使者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936222.md#1">李克强罕称权力来自人民 分析：最后的呼喊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935889.md#1">中共首次公布全国有近6亿栋房屋 舆论震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935981.md#1">韦伯望远镜发现巨大星系 颠覆人类对宇宙认知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935009.md#1">时隔16年再相聚 刘荷娜晒与林志颖合照获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935855.md#1">白纸运动遭秋后算账 27岁男星周峻纬微博被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935998.md#1">“刘三姐”黄婉秋病危昏迷 最后绝笔信曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935910.md#1">退出演艺圈多年 黎姿自曝复出拍戏等3人同意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930473.md#1">50岁前退休不是梦 8个务实的作法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936303.md#1">冷冻干燥鸡蛋粉末怎么吃才安全？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/25/n13937987.htm">公司总裁观神韵感动得要落泪：我们来自天上</a></p><hr>
