--- a/gb/20/10/18/n12483907.md
+++ b/gb/20/10/18/n12483907.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【纽约调查】敲诈、卖假货 华人因这些重罪遭遣返</h2>
-<a href="https://d3twnfu6dd6xpm.cloudfront.net/P2tXnpFct"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dp0r2i3ixve2v.cloudfront.net/W7hXnpFcd"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>敲诈算重罪！走私假鞋入美被判刑，刑满后交ICE手中强制遣返；与纽约华人社区相关的几个遣返案例，司法部门是怎么断案？美国移民和海关执法局又是怎么寻找犯罪的外籍人士呢？（大纪元合成）
 </h6>
 <hr>
@@ -11,7 +11,7 @@
 <p>根据美国法律，美国境内的被驱逐者分为两类，第一类是签证过期、非法逗留，以及偷渡入境等，也叫做无证移民，没有合法居留的证件。第二类是在美国境内犯下罪行并被定罪的罪犯。</p>
 <p>今天讲的案例是犯了罪的，移民可以因为很广泛的犯罪行为遭到强制拘留和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%81%A3%E8%BF%94.md#1">遣返</a>。那个清单很长，有兴趣的观众可以看我的报导中“什么是加重罪？”这一部分：<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/20/10/9/n12463280.md#1">敲诈也算重罪 纽约大陆男子面临被驱逐出境</a></p>
 <p>其中，敲诈勒索是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%8E%E4%BA%BA.md#1">华人</a>社区比较常见的案子，例如中国留学生在微信上遭遇交友诈骗，落入桃色陷阱，对方以不雅视频和曝光个人信息为由实施敲诈，是其中一种。</p>
-<p><center><a width="640" b="360" src=""></a><a href="https://d3twnfu6dd6xpm.cloudfront.net/P2tXnpFct"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/T6H4rop7hjY" frameborder="0"allowfullscreen></a></center></p>
+<p><center><a width="640" b="360" src=""></a><a href="https://dp0r2i3ixve2v.cloudfront.net/W7hXnpFcd"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/T6H4rop7hjY" frameborder="0"allowfullscreen></a></center></p>
 <h2>敲诈也算重罪 纽约大陆男子面临被驱逐出境</h2>
 <p>敲诈他人会导致遣返吗？中国公民曾某在1998年之前因“敲诈”罪名被裁决驱逐出境，如今20多年过去，他宁愿坐移民监上诉不止，也不愿回中国；但由于他被认定犯了重罪，恐怕最终还是面临被驱逐出境及永远无法再入境美国的命运。</p>
 <p>曾先生上诉后，案子被移民上诉委员会（BIA）拒绝，认为他的罪行的确符合《移民和国籍法》中关于“盗窃罪”这一加重罪（Aggravated Felony）的类别，应该遣返回中国。他继续上诉至纽约联邦第二巡回上诉法庭，要求重审，但法庭拒绝了他。</p>
@@ -65,31 +65,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/9/n11034634.md#1" target="_blank">林辉：样板戏李玉和阿庆嫂等扮演者的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949970.md#1">【全球新闻】硅谷银行倒闭 拜登急安抚 确保储户安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950265.md#1">【军事热点】俄军陷停滞 内讧和失控笼罩莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949582.md#1">【百年真相】一个气球 暴露中共致命问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948884.md#1">【翻墙必看】分析：谁投了李强的反对票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943660.md#1">干细胞模型揭示青光眼治疗的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/18/n12483907.htm">【纽约调查】敲诈、卖假货 华人因这些重罪遭遣返</a></p><hr>
